_sass/_base.scss
/*
 * Use box-sizing
 */
* {
  -moz-box-sizing: border-box;
  -webkit-box-sizing: border-box;
  box-sizing: border-box;
}

::selection {
  background-color: rgba(254, 231, 0, .9);
}

*:target {
  background: lightgreen;
  border: 1px dotted;
  padding: 0.25em;
}

html,
button,
input,
select {
  /* anti-aliasing
   * Frankly, i don't know why anti-aliasing isn't enabled by default.
   * It probably should be, but its nice that "good" developers
   * can make their sites look nicer by opting-into antialiased type.
   */
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  /* font-smooth: always; */

  /* text size adjust
   * allows Web authors to control if and how
   * the text-inflating algorithm is applied to the textual content
   * of the element it is applied to.
   */
  -webkit-text-size-adjust: none;
  -moz-text-size-adjust: none;
  -ms-text-size-adjust: none;
  text-size-adjust: none;

  /* Normalize font stack. */
  font-family: "Computer Modern Serif", "system-sans-serif", "system-gothic", Georgia, serif, "Twitter Color Emoji", "Apple Color Emoji", "Segoe UI Emoji";
  font-size: 100%;
  line-height: 1.4;
}

@media (-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi) {
  /* anti-aliasing upgraded for high-DPI macOS/iOS Retina displays */
  html,
  button,
  input,
  select {
    -webkit-font-smoothing: subpixel-antialiased;
  }
}

body {
  background-color: rgba(255, 241, 229, 0.5); /* lol Financial Times bg color */
  color: #292929;
  margin: 0;
  padding: 1.5em;
}

a {
  color: #292929;
}
a:hover {
  color: #0000cc;
}
.entry-content a[rel~="external"]::after,
.e-content a[rel~="external"]::after {
  content: '\238B';
  display: inline-block;
  transform: rotate(90deg);
  margin-left: 0.1875rem;
}

hr {
  border: none;
  border-top: 2pt solid black;
  border-bottom: 1pt solid black;
  height: 4pt;
}

h1,
h2,
h3,
h4,
h5,
h6 {
  font-weight: 400;
  letter-spacing: -.025em;
  text-transform: uppercase;
}

code,
pre {
  background-color: #f8f8f8;
  font-family: monospace;
  white-space: nowrap;
}

q,
blockquote,
blockquote cite {
  font-style: italic;
}

p {
  hyphens: auto;
}

cite {
  font-style: normal;
}

figure {
  margin: 0 -2rem 0 -2rem;
  text-align: center;
}
figure figcaption {
  color: darkgray;
  margin: 0 3rem;
  font-size: 0.875em;
  font-style: italic;
}

img {
  max-width: 100%;
}

